# nino

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run_docker.ps1  run_pred.sh  setup.py
dockerfiles/: Dockerfile
dockerfiles/co-detr/: Dockerfile
dockerfiles/mmdetection/: Dockerfile
generator_models/autoencoder/: basic.py  cnn_encoder.py  train.py
generator_models/preprocess/: __init__.py  image_preprocessor.py
generator_models/util/: __init__.py  constants.py  img_dataloader.py  train_model.py  transform.py
model/: train_yolo_segmentation.py
model/duplicate_detection/: consts.py  dataset.py
model/duplicate_detection/efficientnet/: train.py  (+1 more)
model/segmentation/: README.md  rtmdet_model.py  train.py
model/sprite_classification/: consts.py  dataset.py
notebooks/: AutoEncoder.ipynb
preprocessing/: change_image_size.py  coco_dataset_split.py  get_labeled_images.py  imagenet_dataset.py
scripts/: coco_dataset_split.py  collect_similarity_dataset.py  collect_sprites.py  convert_coco_to_huggingface.py  create_sprite_folders.py  generate_sprite_classification_label_from_coco.py  load_coco_format_segmentation_data.py  run_mask_rcnn.ps1  split_yolo_exported_files.py  upload_to_google_cloud.ps1
trained_models/: nino_classification_efficientnet_v2_l.pth  nino_seg_maskrcnn_e500.pth  nino_seg_yolo_300e.pt
util/: get_segmented_sprite.py  image_video_classification.py  label_calculation.py  load_duplicate_detection_data.py  segmented_model_output.py  sprite_classifications.py  sprite_metadata.py  top_k_anchor_heap.py
(+30 files in other folders)
